Bug 2033867 - Allow drag indicator to be visible when dragging item to top of moz-reorderable-list r=jules,desktop-theme-reviewers
This patch allows the drag indicator to be visible when dragging an item to the top of the list.

A few notes on this:

  - The indicator for the top item is lower than the others as a result of this change, but it mirrors what dragging to the bottom of a list would do.
  - You do lose a bit of the left side of the indicator when dragging to the top. (see the gifs for what it looks like). That's also true already for dragging to the bottom of a list without static items ([[ https://firefoxux.github.io/firefox-desktop-components/?path=/story/ui-widgets-box-group--reorderable&globals=theme:light | An example of that can be found in storybook ]]).

Before:

{F68198517}

After:

{F68198555}

Notes:

* Other options explored - moving the indicator to `position:fixed` to side-step being clipped by the container. That seems to work pretty well but isn't as simple as this fix and I think on balance containing and clipping the indicator is probably ok.

Differential Revision: https://phabricator.services.mozilla.com/D295632

--- a/toolkit/content/widgets/moz-reorderable-list/moz-reorderable-list.css
+++ b/toolkit/content/widgets/moz-reorderable-list/moz-reorderable-list.css
@@ -13,6 +13,9 @@
   height: var(--reorderable-list-indicator-size);
   background-color: var(--reorderable-list-indicator-background-color);
   pointer-events: none;
+  /* The js is dependent this negative margin based on the height of the indicator
+  to ensure the indicator remains visible when moving an item to the top of the
+  container - see Bug 2033867 */
   margin-block: calc(-1 * var(--reorderable-list-indicator-margin));
   width: 4em;
   position: absolute;
